Fix statistics overflowing their container

--- a/src/components/sections/StatsSection/StatsSection.module.scss
+++ b/src/components/sections/StatsSection/StatsSection.module.scss
@@ -26,6 +26,7 @@
   margin-left: -5rem;
   margin-right: -5rem;
   flex-wrap: wrap;
+  max-width: 100%;
 
   @media not (prefers-contrast: more) {
     background-image: linear-gradient(155deg, var(--color-green) 18%, rgba(94,59,255,1) 100%);
